# lambdaGalaxy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
shader/: basic.frag  basic.geo  basic.vert
shader/star/: star.frag  star.vert
src/: Chunk.cpp  Chunk.h  GameLoop.cpp  GameLoop.h  PlanetarySystem.cpp  PlanetarySystem.h  Star.cpp  Star.h  StarField.cpp  StarField.h  main.cpp
src/camera/: Camera.cpp  Camera.h
src/object/: Object.cpp  Object.h
src/object/mesh/: Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  Vertex.cpp  Vertex.h
src/object/shader/: Shader.cpp  Shader.h
